sdk-docs_versioned_docs/version-23.2.x/modules/API/Entities/Asset/Asset.md
---
id: "Asset"
title: "Module: Asset"
sidebar_label: "Asset"
---

## References

### AgentWithGroup

Re-exports [AgentWithGroup](../../../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### Asset

Re-exports [Asset](Types/Types.md#asset)

___

### AssetDetails

Re-exports [AssetDetails](../../../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### BaseAsset

Re-exports [BaseAsset](../../../../classes/API/Entities/Asset/Base/BaseAsset/BaseAsset.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### CollectionKey

Re-exports [CollectionKey](Types/Types.md#collectionkey)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### FungibleAsset

Re-exports [FungibleAsset](../../../../classes/API/Entities/Asset/Fungible/FungibleAsset.md)

___

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

___

### HumanReadable

Re-exports [HumanReadable](../../../../interfaces/API/Entities/Asset/NonFungible/Nft/HumanReadable/HumanReadable.md)

___

### IdentityBalance

Re-exports [IdentityBalance](../../../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### MetadataKeyId

Re-exports [MetadataKeyId](Types/Types.md#metadatakeyid)

___

### Nft

Re-exports [Nft](../../../../classes/API/Entities/Asset/NonFungible/Nft/Nft.md)

___

### NftCollection

Re-exports [NftCollection](../../../../classes/API/Entities/Asset/NonFungible/NftCollection/NftCollection.md)

___

### NftMetadata

Re-exports [NftMetadata](../../../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

___

### NftUniqueIdentifiers

Re-exports [NftUniqueIdentifiers](NonFungible/Nft/Nft.md#nftuniqueidentifiers)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)
